[package]
name = "Adta"
version = "0.1.0"
description = "A Simple To-do App"
authors = ["Aaron Leopold"]
license = ""
repository = ""
default-run = "Adta"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
sea-orm = { version = "0.3.2", features = [ "sqlx-all", "runtime-async-std-native-tls" ] }
futures = "0.3.17"
chrono = { version = "0.4.0", features = ["serde"] }
anyhow = "1"
dirs = "4.0.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
